hphp/test/zend/bad/ext-pcre/002.php.expectf
HipHop Warning: %a
bool(false)
HipHop Warning: %a
bool(false)
HipHop Warning: %a
NULL
HipHop Warning: %a
NULL
string(0) ""
string(12) "a${1b${1c${1"
HipHop Warning: %a
NULL

Parse error: %s in %s002.php(12) : regexp code on line 1
HipHop Fatal error: %a
for ($ in %s002.php on line 12